@startuml

title __TRANSLATORS's Class Diagram__\n

  namespace translators {
    class translators.ClientMessagesTranslator {
        + ClientMessagesTranslator()
        + processIncomingMessage()
        + sendInvitation()
        + sendRefusal()
        - getListOfNotInGamePlayers()
    }
  }
  

  namespace translators {
    class translators.GamePlayTranslator {
        - lastDeadSuggestion : String
        - lastTerritorySuggestion : String
        + GamePlayTranslator()
        + confirmMove()
        + getLastDeadSuggestion()
        + getLastTerritorySuggestion()
        + notifyGameStart()
        + rejectMove()
        + rejectMoveAttempt()
        + sendChooseDead()
        + sendChooseTerritory()
        + sendDeadOK()
        + sendGameStopped()
        + sendOpponentsMove()
        + sendOpponentsMove()
        + sendRemovedStones()
        + sendResults()
        + sendResume()
        + sendStats()
        + sendSurrender()
        + setLastDeadSuggestion()
        + setLastTerritorySuggestion()
        - createRemovedStonesMessage()
        - notifyBoth()
    }
  }
  

  translators.ClientMessagesTranslator o-- server.ClientHandler : clientHandler
  translators.ClientMessagesTranslator o-- gameLogic.Game : game
  translators.GamePlayTranslator o-- gameLogic.Player : black
  translators.GamePlayTranslator o-- gameLogic.Player : white


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
